added functionality to choose location

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
               Alege un alt oras
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Timisoara</a></li>
-              <li><a class="dropdown-item" href="#">Bucuresti</a></li>
-              <li><a class="dropdown-item" href="#">Cluj</a></li>
-              <li><a class="dropdown-item" href="#">Oradea</a></li>
-              <li><a class="dropdown-item" href="#">Sibiu</a></li>
-              <li><a class="dropdown-item" href="#">Arad</a></li>
-              <li><a class="dropdown-item" href="#">Brasov</a></li>
-              <li><a class="dropdown-item" href="#">Miercurea Ciuc</a></li>
+              <li><button class="dropdown-item timisoara">Timisoara</button></li>
+              <li><button class="dropdown-item bucuresti" >Bucuresti</button></li>
+              <li><button class="dropdown-item cluj" >Cluj</button></li>
+              <li><button class="dropdown-item oradea" >Oradea</button></li>
+              <li><button class="dropdown-item sibiu" >Sibiu</button></li>
+              <li><button class="dropdown-item arad" >Arad</button></li>
+              <li><button class="dropdown-item brasov">Brasov</button></li>
+              <li><button class="dropdown-item miercurea-ciuc">Miercurea Ciuc</button></li>
             </ul>
           </div>
         </div>
@@ -80,6 +80,7 @@
     <script src="services/weatherService.js"></script>
     <script src="utils/date.js"></script>
     <script src="utils/weather.js"></script>
+    <script src="sections/ChooseLocation.js"></script>
     <script src="sections/CurrentWeather.js"></script>
 
     <script src="index.js"></script>
