added scroll to top button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
@@ -42,14 +46,22 @@
               Alege un alt oras
             </button>
             <ul class="dropdown-menu">
-              <li><button class="dropdown-item timisoara">Timisoara</button></li>
-              <li><button class="dropdown-item bucuresti" >Bucuresti</button></li>
-              <li><button class="dropdown-item cluj" >Cluj</button></li>
-              <li><button class="dropdown-item oradea" >Oradea</button></li>
-              <li><button class="dropdown-item sibiu" >Sibiu</button></li>
-              <li><button class="dropdown-item arad" >Arad</button></li>
+              <li>
+                <button class="dropdown-item timisoara">Timisoara</button>
+              </li>
+              <li>
+                <button class="dropdown-item bucuresti">Bucuresti</button>
+              </li>
+              <li><button class="dropdown-item cluj">Cluj</button></li>
+              <li><button class="dropdown-item oradea">Oradea</button></li>
+              <li><button class="dropdown-item sibiu">Sibiu</button></li>
+              <li><button class="dropdown-item arad">Arad</button></li>
               <li><button class="dropdown-item brasov">Brasov</button></li>
-              <li><button class="dropdown-item miercurea-ciuc">Miercurea Ciuc</button></li>
+              <li>
+                <button class="dropdown-item miercurea-ciuc">
+                  Miercurea Ciuc
+                </button>
+              </li>
             </ul>
           </div>
         </div>
@@ -75,6 +87,17 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+
+    <button
+      type="button"
+      data-bs-placement="top"
+      data-bs-toggle="popover"
+      data-bs-trigger="hover focus"
+      data-bs-content="Scroll To Top"
+      class="scroll-top-top btn btn-dark rounded-circle"
+    >
+      <span class="material-symbols-outlined"> arrow_upward </span>
+    </button>
 
     <script src="services/utils.js"></script>
     <script src="services/weatherService.js"></script>
