added scroll to top functionality

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <script src="utils/weather.js"></script>
     <script src="sections/ChooseLocation.js"></script>
     <script src="sections/CurrentWeather.js"></script>
+    <script src="sections/ScrollToTop.js"></script>
 
     <script src="index.js"></script>
   </body>
